@@ -19,6 +19,7 @@ next version - not released yet
 ! EVR-CP/Sync renderers could produce wrong colors
 ! Ticket #5239, Fix a crash when specifying a non-existent monitor in the command line (/monitor)
 ! Ticket #5259, The auto fit factor could not be modified unless auto fit was used as auto-zoom
+! Ticket #5262, The "Go to next/previous subtitle" feature did not work for some subtitles
 
 
 1.7.8 - 25 January 2015
